<resources>
    <string name="app_name">SMSPooler</string>

    <string name="sign_out_label">Sign Out</string>
    <string name="setting_menu_label">Settings</string>
    <string name="invite_menu_label">Invite</string>

    <string name="invitation_message">Use sms pooler to save costs on sms forwarding</string>
    <string name="invitation_cta">Call to action</string>
    <string name="invitation_title">SMS Pooler Invite</string>

    <string name="label_google_sign_in">SMSPooler Home</string>
    <string name="desc_google_sign_in">Use a Google Sign In credential to authenticate with Firebase.</string>

    <string name="label_facebook_login">Firebase + Facebook Login</string>
    <string name="desc_facebook_login">Use a Facebook Login credential to authenticate with Firebase.</string>

    <string name="label_twitter_login">Firebase + Twitter Login</string>
    <string name="desc_twitter_login">Use a Twitter Login credential to authenticate with Firebase.</string>

    <string name="label_emailpassword">Email/Password Authentication</string>
    <string name="desc_emailpassword">Use an email and password to authenticate with Firebase.</string>

    <string name="label_anonymous_auth">Anonymous Authentication</string>
    <string name="desc_anonymous_auth">Sign in anonymously and then later upgrade to a full Firebase Auth user..</string>

    <string name="label_custom_auth">Custom Authentication</string>
    <string name="desc_custom_auth">Use a custom token signed by your own server to authenticate with Firebase.</string>

    <string name="hint_user_id">User ID</string>
    <string name="get_custom_token">Get Token</string>
    <string name="sign_in">Sign In</string>
    <string name="create_account">Create Account</string>
    <string name="sign_out">Sign Out</string>
    <string name="disconnect">Disconnect</string>
    <string name="loading">Loading…</string>
    <string name="custom_token">Custom Token</string>
    <string name="signed_out">Signed Out</string>
    <string name="token_null">Token: null</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="desc_firebase_lockup">Firebase logo and name</string>
    <string name="auth_failed">Authentication failed</string>

    <string name="firebase_status_fmt">Firebase User: %s</string>
    <string name="firebase_user_management">Firebase User Management</string>

    <string name="google_status_fmt">Google User: %s</string>
    <string name="google_title_text">Google Sign In</string>

    <string name="facebook_status_fmt">Facebook User: %s</string>
    <string name="facebook_title_text">Facebook Login</string>

    <string name="emailpassword_status_fmt">Email User: %s</string>
    <string name="emailpassword_title_text">Email and Password</string>

    <string name="twitter_status_fmt">Twitter User: %s</string>
    <string name="twitter_title_text">Twitter Login</string>

    <string name="id_fmt">User ID: %s</string>
    <string name="email_fmt">Email: %s</string>


    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_cloud_forwarding">Enable Cloud Forwarding</string>
    <string name="pref_description_cloud_forwarding">Contacts for people to share in cloud</string>


    <string name="pref_title_sms_forwarding">Enable SMS Forwarding</string>
    <string name="pref_description_sms_forwarding">Contacts for people to forward sms</string>

    <string name="pref_title_forward_to">Forward To</string>

    <string name="pref_title_telegram_forwarding">Enable Telegram Forwarding</string>
    <string name="pref_description_telegram_forwarding">Telegram IDs for people to forward sms</string>

    <string name="pref_title_send_to">Send To</string>
    <string name="pref_title_send_bot">Send Bot</string>


    <string name="setting">Settings</string>
    <string name="cancel">Cancel</string>

    <string name="rationale_camera">This app needs access to your camera so you can take pictures.</string>
    <string name="rationale_location_contacts">This app needs access to your location and contacts to know where and who you are.</string>
    <string name="rationale_sms">This app needs access to your sms to process sms content.</string>
    <string name="rationale_internet">This app needs access to your internet to post messages.</string>
    <string name="rationale_contacts">This app needs access to your contacts to indentify message sender.</string>
    <string name="rationale_ask_again">This app may not work correctly without the requested permissions. Open the app settings screen to modify app permissions.</string>
    <string name="io.branch.apiKey" translatable="false">key_live_kah950jnQnTrcEKkfog9VgdnvEcdwmZ7</string>
    <string name="title_activity_main">MainActivity</string>
</resources>
